# csv-explorer

./: LICENSE.txt  README.md  pyproject.toml
sample_data/: sample_1.csv
src/csv_explorer/: __about__.py  csvex.py
tests/: __init__.py
