[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-explorer"
dynamic = ["version"]
description = "Interactively inspect csv's and csv's with custom metadata"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jarrydharris", email = "mail@jarrydharris.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["duckdb", "textual"]

[project.urls]
Documentation = "https://github.com/jarrydharris/csv-explorer#readme"
Issues = "https://github.com/jarrydharris/csv-explorer/issues"
Source = "https://github.com/jarrydharris/csv-explorer"

[tool.hatch.version]
path = "src/csv_explorer/__about__.py"

[tool.hatch.envs.dev]
extra-dependencies = [
  "mypy>=1.0.0", "textual-dev"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/csv_explorer tests}"

[tool.coverage.run]
source_pkgs = ["csv_explorer", "tests"]
branch = true
parallel = true
omit = [
  "src/csv_explorer/__about__.py",
]

[tool.coverage.paths]
csv_explorer = ["src/csv_explorer", "*/csv-explorer/src/csv_explorer"]
tests = ["tests", "*/csv-explorer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
